Bug 326597 - Ctrl+Up-arrow restores previous message with wrong cursor place
Summary: Ctrl+Up-arrow restores previous message with wrong cursor place
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: 0.6.80
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-25 06:47 UTC by Murz
Modified: 2013-11-04 13:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.7.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Murz 2013-10-25 06:47:35 UTC
When I press Ctrl+Up-arrow  hotkey in KDE Telepathy Text-UI window, I see previous message (like in Kopete), but cursor are stay on start of text. Much better if it will be at end of text, like in Kopete behavior, can you fix this?

Reproducible: Always
Comment 1 Daniel Vrátil 2013-11-04 13:19:42 UTC
Git commit e7f7e348b29046d78d5bce7e8f937a92eb5c238a by Dan Vrátil.
Committed on 04/11/2013 at 13:16.
Pushed by dvratil into branch 'kde-telepathy-0.7'.

Move cursor at the end of line when moving through sent messages

When moving through history of sent messages in text-ui, move the cursor
at the end of the text. This is in par with Kopete and Konversation
behavior
FIXED-IN: 0.7.1

M  +1    -0    lib/chat-text-edit.cpp

http://commits.kde.org/telepathy-text-ui/e7f7e348b29046d78d5bce7e8f937a92eb5c238a