Move cursor at the end of line when moving through sent messages

When moving through history of sent messages in text-ui, move the cursor
at the end of the text. This is in par with Kopete and Konversation
behavior

BUG: 326597
FIXED-IN: 0.7.1